[package]
name = "uniswap-arb-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
ethers = { version = "2.0", features = ["abigen", "rustls", "ws"] }
eyre = "0.6"
dotenvy = "0.15"
futures-util = "0.3"
humantime-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
